sponsored-cards__stop-flex-wrap class added to prevent wrapping off small cards

--- a/css/style.css
+++ b/css/style.css
@@ -413,12 +413,18 @@ body {
 
 .sponsored-cards {
   padding-top: var(--spacing-3-2);
-  font-size: 1.4rem; }
+  font-size: 1.4rem;
+  background-color: lightpink; }
   .sponsored-cards__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 2.4rem; }
+  .sponsored-cards__stop-flex-wrap {
+    display: flex;
+    gap: 2.4rem;
+    width: 41.6rem;
+    /* width of two small cards plus gap from sponsored-cards__container class  */ }
   .sponsored-cards__card img {
     height: 20rem;
     object-fit: cover;
@@ -426,17 +432,17 @@ body {
     filter: brightness(90%);
     width: 100%;
     display: block; }
-  .sponsored-cards__card--a {
+  .sponsored-cards__card--md {
     flex: 0 1 41.6rem; }
-  .sponsored-cards__card--b {
+  .sponsored-cards__card--sm {
     flex: 0 1 19.6rem; }
-  .sponsored-cards__card--c {
+  .sponsored-cards__card--sm {
     flex: 0 1 19.6rem; }
-  .sponsored-cards__card--d {
+  .sponsored-cards__card--sm {
     flex: 0 1 19.6rem; }
-  .sponsored-cards__card--e {
+  .sponsored-cards__card--sm {
     flex: 0 1 19.6rem; }
-  .sponsored-cards__card--f {
+  .sponsored-cards__card--md {
     flex: 0 1 41.6rem; }
 
 .nav {
